; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/stlport/src/extr_c_locale_dummyc_locale_dummy.c__WLocale_mbtowc.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/stlport/src/extr_c_locale_dummyc_locale_dummy.c__WLocale_mbtowc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._Locale_codecvt = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @_WLocale_mbtowc(%struct._Locale_codecvt* %0, i8* %1, i8* %2, i64 %3, i32* %4) #0 {
  %6 = alloca %struct._Locale_codecvt*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32*, align 8
  store %struct._Locale_codecvt* %0, %struct._Locale_codecvt** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = load i8, i8* %11, align 1
  %13 = load i8*, i8** %7, align 8
  store i8 %12, i8* %13, align 1
  ret i64 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
